--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -9,3 +9,4 @@ jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcURL=jdbc:jtds:sqlserver://localhost/labkey
 jdbcUser=sa
 jdbcPassword=sa
+hibernateDialect=org.hibernate.dialect.SQLServerDialect
