--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -9,3 +9,4 @@ jdbcDriverClassName=org.postgresql.Driver
 jdbcURL=jdbc:postgresql://localhost/labkey
 jdbcUser=postgres
 jdbcPassword=sasa
+hibernateDialect=org.hibernate.dialect.PostgreSQLDialect
