Important: Do a pick_pg or pick_mssql after syncing to this commit.
Add bootstrap & drop_database tasks to build.xml

PageFlowUtil.getStreamContentsAsList()

3760 : Change member list lookups from "all site users" to "users with read permission in this container"
3758 : Discuss this: member list auto lookup is broken

SVN r6806 |2007-07-28 04:34:05 +0000

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,8 +5,13 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the jTDS jdbc driver on localhost
+databaseDefault=labkey
+databaseBootstrap=labkey2
+databaseMaster=master
+
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
-jdbcURL=jdbc:jtds:sqlserver://localhost/labkey
+jdbcURL=jdbc:jtds:sqlserver://localhost/${jdbcDatabase}
 jdbcUser=sa
 jdbcPassword=sa
 hibernateDialect=org.hibernate.dialect.SQLServerDialect
+
