--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -5,8 +5,13 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the PostgreSQL jdbc driver on localhost
+databaseDefault=labkeypg
+databaseBootstrap=labkey2
+databaseMaster=template1
+
 jdbcDriverClassName=org.postgresql.Driver
-jdbcURL=jdbc:postgresql://localhost/labkey
+jdbcURL=jdbc:postgresql://localhost/${jdbcDatabase}
 jdbcUser=postgres
 jdbcPassword=sasa
 hibernateDialect=org.hibernate.dialect.PostgreSQLDialect
+
