Revert accidental commit of these files.
SVN r9231 |2008-07-29 01:00:13 +0000

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,8 +5,8 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the jTDS jdbc driver on localhost
-databaseDefault=labkey3
-databaseBootstrap=labkey3
+databaseDefault=labkey
+databaseBootstrap=labkey2
 databaseMaster=master
 
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
