Revert accidental checkin
SVN r9942 |2008-12-09 19:02:37 +0000

--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -5,7 +5,7 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the PostgreSQL jdbc driver on localhost
-databaseDefault=labkey2
+databaseDefault=labkey
 databaseBootstrap=labkey2
 databaseMaster=template1
 
