- add jdbcURLParameters replacement to the config.properties
SVN r10967 |2009-05-08 00:23:41 +0000

--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -5,12 +5,12 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the PostgreSQL jdbc driver on localhost
-databaseDefault=labkey
-databaseBootstrap=labkey2
+databaseDefault=trunk
+databaseBootstrap=trunk2
 databaseMaster=template1
 
 jdbcDriverClassName=org.postgresql.Driver
-jdbcURL=jdbc:postgresql://localhost/${jdbcDatabase}
+jdbcURL=jdbc:postgresql://localhost/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=postgres
 jdbcPassword=sasa
 hibernateDialect=org.hibernate.dialect.PostgreSQLDialect
