--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,12 +5,12 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the jTDS jdbc driver on localhost
-databaseDefault=labkey
-databaseBootstrap=labkey2
+databaseDefault=trunk
+databaseBootstrap=trunk2
 databaseMaster=master
 
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
-jdbcURL=jdbc:jtds:sqlserver://localhost/${jdbcDatabase}
+jdbcURL=jdbc:jtds:sqlserver://localhost/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
 jdbcPassword=sa
 hibernateDialect=org.hibernate.dialect.SQLServerDialect
