--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,8 +5,8 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the jTDS jdbc driver on localhost
-databaseDefault=trunk
-databaseBootstrap=trunk2
+databaseDefault=labkey
+databaseBootstrap=labkey2
 databaseMaster=master
 
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
