--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -5,8 +5,8 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the PostgreSQL jdbc driver on localhost
-databaseDefault=trunk
-databaseBootstrap=trunk2
+databaseDefault=labkey
+databaseBootstrap=labkey2
 databaseMaster=template1
 
 jdbcDriverClassName=org.postgresql.Driver
