--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -12,6 +12,6 @@ databaseMaster=template1
 jdbcDriverClassName=org.postgresql.Driver
 jdbcURL=jdbc:postgresql://localhost/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=postgres
-jdbcPassword=sasa
+jdbcPassword=password
 hibernateDialect=org.hibernate.dialect.PostgreSQLDialect
 
