Excluded files were included, so I need to redo the commit.
SVN r11997 |2009-10-08 21:40:50 +0000

--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -12,6 +12,6 @@ databaseMaster=template1
 jdbcDriverClassName=org.postgresql.Driver
 jdbcURL=jdbc:postgresql://localhost/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=postgres
-jdbcPassword=password
+jdbcPassword=sasa
 hibernateDialect=org.hibernate.dialect.PostgreSQLDialect
 
