Modifying tests to support disabling assertions and devMode. 8737 : Use consistent casing with test parameters (classPath -> classpath) 5035 : Configure TeamCity to cover more versions of external components
SVN r12525 |2009-12-11 01:06:31 +0000

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -8,9 +8,11 @@ smtpPort=25
 databaseDefault=labkey
 databaseBootstrap=labkey2
 databaseMaster=master
+databaseDefaultHost=localhost
+databaseDefaultPort=1433
 
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
-jdbcURL=jdbc:jtds:sqlserver://localhost/${jdbcDatabase}${jdbcURLParameters}
+jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
 jdbcPassword=sa
 hibernateDialect=org.hibernate.dialect.SQLServerDialect
