--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -8,9 +8,11 @@ smtpPort=25
 databaseDefault=labkey
 databaseBootstrap=labkey2
 databaseMaster=template1
+databaseDefaultHost=localhost
+databaseDefaultPort=5432
 
 jdbcDriverClassName=org.postgresql.Driver
-jdbcURL=jdbc:postgresql://localhost/${jdbcDatabase}${jdbcURLParameters}
+jdbcURL=jdbc:postgresql://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=postgres
 jdbcPassword=sasa
 hibernateDialect=org.hibernate.dialect.PostgreSQLDialect
