--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -5,7 +5,7 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the PostgreSQL jdbc driver on localhost
-databaseDefault=labkey
+databaseDefault=labkeyClean
 databaseBootstrap=labkey2
 databaseMaster=template1
 databaseDefaultHost=localhost
