revert accidental checkin
SVN r14169 |2010-07-14 18:44:14 +0000

--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -5,8 +5,8 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the PostgreSQL jdbc driver on localhost
-databaseDefault=trunk_clean
-databaseBootstrap=trunk2
+databaseDefault=labkey
+databaseBootstrap=labkey2
 databaseMaster=template1
 databaseDefaultHost=localhost
 databaseDefaultPort=5432
