--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -11,6 +11,10 @@ databaseMaster=master
 databaseDefaultHost=localhost
 databaseDefaultPort=1433
 
+# database type and version are used by the test harness
+databaseType=mssql
+databaseType=2008
+
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
