--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -11,6 +11,10 @@ databaseMaster=template1
 databaseDefaultHost=localhost
 databaseDefaultPort=5432
 
+# database type and version are used by the test harness
+databaseType=pg
+databaseType=9.1
+
 jdbcDriverClassName=org.postgresql.Driver
 jdbcURL=jdbc:postgresql://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=postgres
