databaseType and databaseVersion properties
SVN r21188 |2012-07-17 01:50:36 +0000

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -13,7 +13,7 @@ databaseDefaultPort=1433
 
 # database type and version are used by the test harness
 databaseType=mssql
-databaseType=2008
+databaseVersion=2008
 
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
