--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -13,7 +13,7 @@ databaseDefaultPort=5432
 
 # database type and version are used by the test harness
 databaseType=pg
-databaseType=9.1
+databaseVersion=9.1
 
 jdbcDriverClassName=org.postgresql.Driver
 jdbcURL=jdbc:postgresql://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
