Add a defaultKey to the MasterEncryptionKey parameter for pg and mssql configs.
SVN r29317 |2013-11-01 21:14:28 +0000

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -21,3 +21,6 @@ jdbcUser=sa
 jdbcPassword=sa
 hibernateDialect=org.hibernate.dialect.SQLServerDialect
 
+# key for the encrypted property store
+masterEncryptionKey=defaultKey
+
