--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -21,3 +21,6 @@ jdbcUser=postgres
 jdbcPassword=sasa
 hibernateDialect=org.hibernate.dialect.PostgreSQLDialect
 
+# key for the encrypted property store
+masterEncryptionKey=defaultKey
+
