Set default SQL Server password to something that meets minimum complexity requirement
SVN r38486 |2015-06-23 18:04:23 +0000

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -18,7 +18,7 @@ databaseVersion=2008
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
-jdbcPassword=sa
+jdbcPassword=sasasa
 hibernateDialect=org.hibernate.dialect.SQLServerDialect
 
 # key for the encrypted property store
