--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -5,7 +5,7 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the jTDS jdbc driver on localhost
-databaseDefault=sqlsrv_16.1team
+databaseDefault=labkey
 databaseBootstrap=labkey2
 databaseMaster=master
 databaseDefaultHost=localhost
@@ -17,9 +17,8 @@ databaseVersion=2008
 
 jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
-jdbcUser=Brad
-jdbcPassword=135Lolwutpear531
-hibernateDialect=org.hibernate.dialect.SQLServerDialect
+jdbcUser=sa
+jdbcPassword=sa
 
 # key for the encrypted property store
 masterEncryptionKey=defaultKey
