Revert 46402 - missed files due to changelist
SVN r46404 |2016-09-15 22:13:45 +0000

--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -5,7 +5,7 @@ smtpUser=Anonymous
 smtpPort=25
 
 # Use the PostgreSQL jdbc driver on localhost
-databaseDefault=GEL_Trunk
+databaseDefault=labkey
 databaseBootstrap=labkey2
 databaseMaster=template1
 databaseDefaultHost=localhost
@@ -18,8 +18,7 @@ databaseVersion=9.1
 jdbcDriverClassName=org.postgresql.Driver
 jdbcURL=jdbc:postgresql://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=postgres
-jdbcPassword=135Lolwutpear531
-hibernateDialect=org.hibernate.dialect.PostgreSQLDialect
+jdbcPassword=sasa
 
 # key for the encrypted property store
 masterEncryptionKey=defaultKey
