--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,22 @@ buildscript {
         jcenter()
         maven {
            url "${artifactory_contextUrl}/plugins-release-local"
-           credentials {
-              username = "${artifactory_user}"
-              password = "${artifactory_password}"
+           if (hasProperty('artifactory_user') && hasProperty('artifactory_password'))
+           {
+              credentials {
+               username = "${artifactory_user}"
+               password = "${artifactory_password}"
+              }
            }
         }
         maven {
            url "${artifactory_contextUrl}/plugins-snapshot-local"
-           credentials {
-              username = "${artifactory_user}"
-              password = "${artifactory_password}"
+           if (hasProperty('artifactory_user') && hasProperty('artifactory_password'))
+           {
+               credentials {
+                  username = "${artifactory_user}"
+                  password = "${artifactory_password}"
+               }
            }
         }
     }
@@ -145,8 +151,11 @@ artifactory {
     publish {
         repository {
             repoKey = project.version.endsWith('-SNAPSHOT') ? 'libs-snapshot-local' : "libs-release-local"
-            username = artifactory_user
-            password = artifactory_password
+            if (hasProperty('artifactory_user') && hasProperty('artifactory_password'))
+            {
+               username = artifactory_user
+               password = artifactory_password
+            }
             maven = true
         }
         defaults {
