--- a/build.gradle
+++ b/build.gradle
@@ -5,21 +5,21 @@ buildscript {
     jcenter()
     maven {
       url "${artifactory_contextUrl}/plugins-release-local"
-      if (hasProperty('artifactory_user') && hasProperty('artifactory_password'))
+      if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
       {
         credentials {
-          username = "${artifactory_user}"
-          password = "${artifactory_password}"
+          username = artifactory_user
+          password = artifactory_password
         }
       }
     }
     maven {
       url "${artifactory_contextUrl}/plugins-snapshot-local"
-      if (hasProperty('artifactory_user') && hasProperty('artifactory_password'))
+      if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
       {
         credentials {
-          username = "${artifactory_user}"
-          password = "${artifactory_password}"
+          username = artifactory_user
+          password = artifactory_password
         }
       }
     }
@@ -30,6 +30,11 @@ buildscript {
     classpath "org.labkey.build:versioning:${versioningPluginVersion}"
     classpath "org.labkey.build:gradlePlugins:${gradlePluginsVersion}"
   }
+  configurations.all {
+    // Check for updates every build for SNAPSHOT dependencies
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+  }
+
 }
 
 allprojects {
@@ -87,8 +92,8 @@ allprojects {
                 if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
                 {
                   credentials {
-                    username = "${artifactory_user}"
-                    password = "${artifactory_password}"
+                    username = artifactory_user
+                    password = artifactory_password
                   }
                 }
               }
@@ -98,8 +103,8 @@ allprojects {
                 if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
                 {
                   credentials {
-                    username = "${artifactory_user}"
-                    password = "${artifactory_password}"
+                    username = artifactory_user
+                    password = artifactory_password
                   }
                 }
               }
