enable preemptive authentication to get around artifactory bug when anonymous user is enabled
SVN r48066 |2016-12-07 17:42:05 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
           username = artifactory_user
           password = artifactory_password
         }
+        authentication {
+          basic(BasicAuthentication) // enable preemptive authentication to get around https://www.jfrog.com/jira/browse/RTFACT-4434
+        }
       }
     }
     maven {
@@ -20,6 +23,9 @@ buildscript {
         credentials {
           username = artifactory_user
           password = artifactory_password
+        }
+        authentication {
+          basic(BasicAuthentication) // enable preemptive authentication to get around https://www.jfrog.com/jira/browse/RTFACT-4434
         }
       }
     }
@@ -95,6 +101,9 @@ allprojects {
                     username = artifactory_user
                     password = artifactory_password
                   }
+                  authentication {
+                     basic(BasicAuthentication) // enable preemptive authentication to get around https://www.jfrog.com/jira/browse/RTFACT-4434
+                  }
                 }
               }
               maven {
@@ -105,6 +114,9 @@ allprojects {
                   credentials {
                     username = artifactory_user
                     password = artifactory_password
+                  }
+                  authentication {
+                     basic(BasicAuthentication) // enable preemptive authentication to get around https://www.jfrog.com/jira/browse/RTFACT-4434
                   }
                 }
               }
