update check for publishing crednetials properties to use project. prefix
SVN r48081 |2016-12-08 21:47:03 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -166,7 +166,7 @@ artifactory {
   publish {
     repository {
       repoKey = project.version.endsWith('-SNAPSHOT') ? 'libs-snapshot-local' : "libs-release-local"
-      if (hasProperty('artifactory_user') && hasProperty('artifactory_password'))
+      if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
       {
         username = artifactory_user
         password = artifactory_password
