for repository used in settings, change caching strategy for snapshots and use basic authentication
SVN r48121 |2016-12-13 04:26:58 +0000

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,11 +12,18 @@ buildscript {
                   username = "${artifactory_user}"
                   password = "${artifactory_password}"
                }
+               authentication {
+                  basic(BasicAuthentication) // enable preemptive authentication to get around https://www.jfrog.com/jira/browse/RTFACT-4434
+               }
             }
         }
     }
     dependencies {
         classpath "org.labkey.build:gradlePlugins:${gradlePluginsVersion}"
+    }
+    configurations.all {
+        // Check for updates every build for SNAPSHOT dependencies
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
 }
 
