Build Stabilization  - Bumped gradle wrapper version number to 3.1.2  - Enabled parallel build
SVN r48135 |2016-12-13 23:56:01 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+org.gradle.parallel=true
+
 # the URL for the artifact repository where our build plugins are housed
 # as well as the build artifacts. (Be careful not to include a trailing slash 
 # in the context URL or you will get a 500 error from artifactory.)
