--- a/build.gradle
+++ b/build.gradle
@@ -192,3 +192,12 @@ subprojects {
           group: "Help",
           description: "Displays the dependencies for all projects")
 }
+
+task("showTeamCityProps", group: "Help", description: "Show properties on TeamCity").doLast({
+    println("teamcity properties")
+    if (project.hasProperty('teamcity'))
+        {
+            println(project.teamcity)
+        }
+    println("system name property ${System.getProperty('name')}")
+})
