--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.parallel=true
+#org.gradle.parallel=true
 
 # the URL for the artifact repository where our build plugins are housed
 # as well as the build artifacts. (Be careful not to include a trailing slash 
