declare artifact dependencies for tomcat startup rather than copying from external/lib/tomcat
SVN r48406 |2016-12-28 22:09:21 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -82,6 +82,8 @@ jodaTimeVersion=2.6
 
 jsonSimpleVersion=1.1
 
+jtdsVersion=1.3.1
+
 jtidyVersion=r918
 
 junitVersion=4.12
@@ -92,6 +94,8 @@ kaptchaVersion=2.3
 
 log4jVersion=1.2.17
 
+mysqlDriverVersion=5.1.39
+
 objenesisVersion=1.0
 
 # increase from 2.0 for remoteclientapi/java
@@ -100,6 +104,8 @@ opencsvVersion=2.3
 patriciaTrieVersion=0.6
 
 picardLibVersion=2.2.4
+
+postgresqlDriverVersion=9.4.1210
 
 quartzVersion=2.1.7
 
