--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,8 @@ allprojects {
 
   dependencies {
     //for SqlUtils
-    driver 'net.sourceforge.jtds:jtds:1.3.1'
-    driver 'org.postgresql:postgresql:9.4.1210'
+    driver "net.sourceforge.jtds:jtds:${jtdsVersion}"
+    driver "org.postgresql:postgresql:${postgresqlDriverVersion}"
   }
 
   if (project.hasProperty('includeVcs'))
