include server test project in default settings
SVN r48468 |2017-01-03 17:18:03 +0000

--- a/settings.gradle
+++ b/settings.gradle
@@ -48,3 +48,4 @@ BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR
 
 // The line below is an example of how to include a single module
 //include ":server:optionalModules:workflow"
+include ":server:test"
