typo in comment
SVN r48488 |2017-01-03 23:51:39 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 # in the context URL or you will get a 500 error from artifactory.)
 artifactory_contextUrl=https://artifactory.labkey.com/artifactory
 
-# indicates if we should use prevoiusly published artifacts or build from source
+# indicates if we should use previously published artifacts or build from source
 # This setting applies to all projects unless overridden on command line or in a
 # project's own gradle.properties file.
 buildFromSource=true
