Issue 28787: declare explicit dependency on cglib-nodep version 2.2.3 (for unknown reasons)
SVN r48570 |2017-01-06 19:23:28 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -34,6 +34,8 @@ bouncycastleVersion=1.54
 
 bzipVersion=1.0
 
+cglibNodepVersion=2.2.3
+
 commonsCollections4Version=4.1
 # this file contains versions of libraries that are shared across multiple modules
 commonsCodecVersion=1.6
