throw exception if tomcat home directory not configured
SVN r48609 |2017-01-09 18:42:27 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ allprojects {
   ext
           {
             tomcatDir = project.hasProperty('teamcity') ? teamcity['tomcat.home'] : System.properties['tomcat.home']
+            if (tomcatDir == null)
+                throw new GradleException("Tomcat home directory not set.  Please set the value of systemProp.tomcat.home.")
 //                tomcatDir = project.hasProperty('teamcity') ? teamcity['tomcat.home'] : (System.env.CATALINA_HOME != null ? System.env.CATALNA_HOME : System.properties['tomcat.home'])
             tomcatConfDir = "${tomcatDir}/conf/Catalina/localhost"
           }
