--- a/gradle.properties
+++ b/gradle.properties
@@ -118,7 +118,7 @@ romeVersion=1.0
 # this version is required for Tomcat 7 support
 servletApiVersion=3.0
 
-# this version is forced for comatiblity with pipeline and tika
+# this version is forced for compatibility with pipeline and tika
 slf4jLog4j12Version=1.7.5
 
 springVersion=4.0.6.RELEASE
