Issue 28931: Move Tika parsers to a separate classloader Issue 28932: Upgrade Tika
Move tika-app (includes all the parser jars, the vast majority of the Tika bulk) to the Search module. Leave behind just tika-core in API. Use the recently added separate classloader in Search to keep all the parser jars off the main classpath.

Upgrade Tika 1.5 -> 1.14

Upgrade ROME (1.0 -> 1.7.1) and add JDOM 2.0.4 dependency

Add jars for direct dependencies for which we used to rely on tika-app-1.5. Upgrade them to the latest versions:
- Apache Commons Compress 1.13 (upgrade from 1.5)
- Apache PDFBox 2.0.4 (upgrade from 1.8.4)
- Apache POI 3.15 (upgrade from 3.10-beta2)

SVN r48690 |2017-01-13 06:32:11 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -105,7 +105,11 @@ opencsvVersion=2.3
 
 patriciaTrieVersion=0.6
 
+pdfboxVersion=2.0.4
+
 picardLibVersion=2.2.4
+
+poiVersion=3.15
 
 postgresqlDriverVersion=9.4.1212
 
@@ -113,7 +117,7 @@ quartzVersion=2.1.7
 
 rforgeVersion=0.6-8
 
-romeVersion=1.0
+romeVersion=1.7.1
 
 # this version is required for Tomcat 7 support
 servletApiVersion=3.0
@@ -127,9 +131,7 @@ sqliteJdbcVersion=3.7.2
 
 thumnailatorVersion=0.4.8
 
-# the external 1.5 version of tika-app brings with it an older version of xmlbeans (2.3.0) that is incompatible
-# with some of our code
-tikaAppVersion=1.5
+tikaCoreVersion=1.14
 
 validationApiVersion=1.0.0.GA
 
