Fix up gradle build for tika changes
SVN r48736 |2017-01-17 04:06:19 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -131,7 +131,8 @@ sqliteJdbcVersion=3.7.2
 
 thumbnailatorVersion=0.4.8
 
-tikaCoreVersion=1.14
+# used for tika-core in API and tika-app in search
+tikaVersion=1.14
 
 validationApiVersion=1.0.0.GA
 
